# plasma-hub

./: .env  .gitignore  AGENTS.md  README.md  log-server.js  package-lock.json  package.json  test-imports.ts  test-yt-dl.ts  test-yt.ts  vite.config.ts  yt_test.json  yt_test_tv.json  yt_test_web.json
public/: sw.js
scripts/: check-android-toolchain.sh  check-tdlib-runtime.sh  install-android-apk.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  plasma_hub.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  downloader.rs  lib.rs  main.rs  tdlib_native.rs  twitter_native.rs  youtube.rs
src-tauri/src/commands/: filesystem.rs
src-tauri/src/services/: message_cache.rs  mod.rs  telegram.rs  telegram_android.rs  twitter.rs  youtube.rs
src-tauri/src/services/telegram/: media_http.rs
src/app/: App.tsx  AppShell.tsx  LoginScreen.tsx  RuntimeCompatibilityNotice.tsx  useWebviewLogger.ts
src/components/: ChatAvatar.tsx  ContextMenu.tsx  MessageMedia.tsx
src/features/appearance/: AppearanceStore.ts
src/features/downloader/: DownloadService.ts  downloader.ts  downloaderApi.ts  downloaderUtils.ts  platforms.tsx  types.ts
src/features/telegram/: Dashboard.tsx  DashboardChatList.tsx  DashboardComposer.tsx  DashboardHelpers.tsx  DashboardIcons.tsx  DashboardInfoPanel.tsx  DashboardMassDownloadPanel.tsx  Downloads.tsx  MediaCacheService.ts  Settings.tsx  TelegramConfig.ts  TelegramDashboardConstants.ts  TelegramDashboardTypes.ts  (+6 more)
src/styles/: App.css  Dashboard.css  Downloads.css  TwitterLibrary.css  index.css
(+18 files in other folders)
