[package]
name = "plasma-hub"
version = "0.1.0"
description = "Plasma Hub desktop and Android app"
authors = ["Camacho"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "plasma_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["stream", "json"] }
tauri-plugin-http = "2"
regex = "1.12.4"
tauri-plugin-dialog = "2"
tdlib-rs = { version = "1.4.0", features = ["download-tdlib"] }

[target.'cfg(not(target_os = "android"))'.build-dependencies]
tdlib-rs = { version = "1.4.0", features = ["download-tdlib"] }
